Use QGuiApplication::focusWindowChanged instead of KWindowSystem::activeWindowChanged

It works on Wayland too and therefore fixes closing Yakuake on focus loss on Wayland with KeepOpen=false

BUG: 380497